# LMSimRecon

./: .gitignore  .gitmodules  CONTRIBUTING.md  NOTICE.txt  README.md  environment.yml
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
cpp/: CMakeLists.txt  README.md
data/: .gitignore  SL.npy
python/: 00_simulate_lm_data.py  01_reconstruct_lm_data.py  README.md  demo_read_reconstruct.py  demo_write.py  io_yardl.py  parallelproj_sim.py  parallelproj_sim_tof.py  parallelproj_utils.py  prd_io.py  prd_test.ipynb  start.py  utils.py
